# mathsoc-bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: eca473e142b1_initial.py
mathsoc_bot/: __init__.py  bot.py  constants.py  crypto.py  email_tools.py  secrets.py  token_tools.py
mathsoc_bot/cogs/: admin.py  confessions.py  verification.py
mathsoc_bot/db/: __init__.py  helpers.py  models.py
mathsoc_bot/utils/: checks.py
