[tool.poetry]
name = "mathsoc_bot"
version = "0.1.0"
description = "Mathsoc's discord bot"
authors = ["Ben Simms <ben@bensimms.moe>"]

[tool.poetry.dependencies]
python = "^3.8"
itsdangerous = "^1.1"
cryptography = "^3.0"
python-dotenv = "^0.14"
"discord.py" = "^1.4"

[tool.poetry.scripts]
start_bot = 'mathsoc_bot:run'
gen_tokens = 'mathsoc_bot:gen_tokens'

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
